# SummerSchool25_SBPGU

./: CMakeLists.txt  README.md
.github/workflows/: cpp-linter.yml  github_ci 2.yml  github_ci.yml
include/: template.h
samples/: main.cpp
src/: CMakeLists.txt  template.cpp
test/: test_main.cpp  test_template.cpp
